--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-size-matters": "^0.1.4",
     "react-native-vector-icons": "^6.1.0"
   },
   "devDependencies": {
